multi_index_map_derive2/tests/ui/enum.stderr
error: MultiIndexMap2 can only be derived for structs
 --> tests/ui/enum.rs:4:1
  |
4 | enum Unsupported {
  | ^^^^

error: MultiIndexMap2 requires at least one #[multi_index(...)] field
 --> tests/ui/enum.rs:4:6
  |
4 | enum Unsupported {
  |      ^^^^^^^^^^^
