multi_index_map_derive2/tests/ui/enum.rs
use multi_index_map_derive2::MultiIndexMap;

#[derive(MultiIndexMap)]
enum Unsupported {
    Value,
}

fn main() {}
